# Adi

./: .gitignore  404.html  CNAME  admin.html  index.html
.github/workflows/: console-plugin.yml  midi-helper.yml
Tools/Chrome Extension/RTL Extension/: manifest.json
he/: admin.html  index.html
main_site/: README.md  adiariel-site-worker.js
tools/chrome/adi_spell_chekcer/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
tools/chrome/heb_eng_mix_fix/: README.md  background.js  content.css  content.js  english_dict.js  hebrew_dict.js  hebrew_map.js  manifest.json  overlay.css  popup.css  popup.html  popup.js  ui.js
tools/chrome/rtl_extension/: content.js
tools/chrome/rtl_extension/privacy_policy/: index.html
tools/elgato_stream_deck_plugins/: HANDOFF.md
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/: .gitattributes  .gitignore  CHANGELOG.md  README.md  package.json
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/ableton/max_for_live/: README.md
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/ableton/remote_script/AdiVST/: AdiVST.py  __init__.py  live_bridge.py  ws_server.py
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/com.adiariel.ableton-vst.sdPlugin/: app.html  manifest.json
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/com.adiariel.ableton-vst.sdPlugin/js/: bridge.js  keys.js  plugin.js  sd-client.js  touchscreen.js
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/com.adiariel.ableton-vst.sdPlugin/js/controllers/: BlackholeController.js  DbCompController.js  registry.js  (+13 more)
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/com.adiariel.ableton-vst.sdPlugin/layouts/: dial.json
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/com.adiariel.ableton-vst.sdPlugin/pi/: inspector.html  inspector.js  sdpi.css
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/demo/: demo.js  index.html  styles.css
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/docs/: ABLETON_SETUP.md  ARCHITECTURE.md  BLACKHOLE.md  DBCOMP.md  EQ8.md  HANDOFF.md  H_DELAY.md  INDEQ.md  OMNIPRESSOR.md  PROQ3.md  PROTOCOL.md  PULSAR_MASSIVE.md  SATURATE.md  SIDEMINDER.md  SPECTRE.md  VALHALLA_ROOM.md  VALHALLA_VINTAGE_VERB.md
tools/elgato_stream_deck_plugins/adi_ableton_vst_controller/scripts/: gen_icons.py  install-mac.sh  install-windows.ps1  pack.ps1  pack.sh  validate.py
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/: .gitignore  CHANGELOG.md  README.md  package.json
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/com.adi.visualizers-and-meters.sdPlugin/: app.html  manifest.json
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/com.adi.visualizers-and-meters.sdPlugin/js/: engine.js  plugin.js
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/com.adi.visualizers-and-meters.sdPlugin/layouts/: visualizer.json
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/com.adi.visualizers-and-meters.sdPlugin/pi/: inspector.html  inspector.js  sdpi.css
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/demo/: demo.js  index.html  styles.css
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/docs/: ARCHITECTURE.md
tools/elgato_stream_deck_plugins/adi_visualizers_and_meters/scripts/: gen_icons.py  install-mac.sh  install-windows.ps1  pack.ps1  pack.sh  test_readout.mjs  validate.py
tools/elgato_stream_deck_plugins/com.adiariel.console.sdPlugin/: .gitattributes  .gitignore  LICENSE  README.md  manifest.json  package-lock.json  package.json  rollup.config.mjs
tools/elgato_stream_deck_plugins/com.adiariel.console.sdPlugin/.github/workflows/: build.yml
tools/elgato_stream_deck_plugins/com.adiariel.console.sdPlugin/layouts/: acoustic.json  bpm.json  calc.json  range.json
tools/elgato_stream_deck_plugins/com.adiariel.console.sdPlugin/src/: plugin.js
tools/elgato_stream_deck_plugins/com.adiariel.console.sdPlugin/ui/: inspector.html
tools/elgato_stream_deck_plugins/com.adiariel.rekordbox.sdPlugin/: .gitattributes  .gitignore  CHANGELOG.md  README.md  manifest.json  package-lock.json  package.json  rollup.config.mjs
tools/elgato_stream_deck_plugins/com.adiariel.rekordbox.sdPlugin/layouts/: filter.json  tempo.json  volume.json
tools/elgato_stream_deck_plugins/com.adiariel.rekordbox.sdPlugin/scripts/: gen_icons.py  midi_smoke.mjs  validate.py  vendor.mjs
tools/elgato_stream_deck_plugins/com.adiariel.rekordbox.sdPlugin/src/: midi-out.js  midimap.js  plugin.js
tools/elgato_stream_deck_plugins/com.adiariel.rekordbox.sdPlugin/ui/: inspector.html
tools/elgato_stream_deck_plugins/midi_control/: .gitignore  CMakeLists.txt  README.md  main.cpp
tools/elgato_stream_deck_plugins/midi_control/com.adiariel.midicontrol.sdPlugin/: index.html  manifest.json  pi.html  plugin.js
tools/elgato_stream_deck_plugins/midi_control/com.adiariel.midicontrol.sdPlugin/imgs/: PLACE_ICONS_HERE.txt
tools/elgato_stream_deck_plugins/midi_control/scripts/: gen_icons.py  validate.py
tools/rekordbox_que_counter/: README.md  app.js  cuemath.js  index.html  manifest.webmanifest  relay-worker.js  seed.js  style.css  users.json
tools/rekordbox_que_counter/lists/: avastha-4h-set.json  index.json
tools/rekordbox_que_counter/lists/avastha/: avastha-4h-set.json  index.json
tools/rekordbox_que_counter/lists/public/: index.json
